<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A405A"
    android:backgroundTint="#3A405A"
    tools:context=".PatientCareHistory">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timeline_view"
        android:layout_width="360dip"
        android:layout_height="300dip"
        android:layout_marginTop="100dp"
        android:background="@color/beige_main"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="100dip"
        android:layout_height="48dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/deep_red"
        android:clickable="false"
        android:contextClickable="false"
        android:fontFamily="@font/dm_sans_medium"

        android:text="@string/logout"
        android:textColor="@color/dusty_rose"
        android:textColorHighlight="#F55866"
        android:textColorLink="#F55866"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="100dip"
        android:layout_height="48dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/dusty_rose"
        android:clickable="false"
        android:contextClickable="false"
        android:fontFamily="@font/dm_sans_medium"

        android:text="@string/home_button"
        android:textColor="@color/beige_main"
        android:textColorHighlight="#C95D63"
        android:textColorLink="#C95D63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/welcome_patient"
        android:textColor="#AEC5EB"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>