<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    tools:context=".PatientHomeView">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/dm_sans_medium"
        android:outlineAmbientShadowColor="@color/black"
        android:text="@string/welcome"
        android:textColor="@color/denim"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/companyLogo" />

    <ImageView
        android:id="@+id/companyLogo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_v3"
        android:contentDescription="@string/status_company_logo_image" />

    <Button
        android:id="@+id/careHistoryButton"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_marginTop="330dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/coral"
        android:clickable="false"
        android:contextClickable="false"
        android:text="@string/care_history"
        android:textColor="@color/white"
        android:textColorHighlight="#C95D63"
        android:textColorLink="#C95D63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sharedHistoryButton"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_marginTop="430dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/coral"
        android:clickable="false"
        android:contextClickable="false"
        android:text="@string/shared_history"

        android:textColor="@android:color/white"
        android:textColorHighlight="#C95D63"
        android:textColorLink="#C95D63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_marginTop="530dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/denim"
        android:clickable="false"
        android:contextClickable="false"
        android:text="@string/logout"

        android:textColor="@android:color/white"
        android:textColorHighlight="#C95D63"
        android:textColorLink="#C95D63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkbtbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Check Bluetooth Status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

    <ListView
        android:id="@+id/deviceListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>