<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    tools:context=".DoctorHomeView">

    <Button
        android:id="@+id/patientCareHistory"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_marginTop="348dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/coral"
        android:clickable="false"
        android:contextClickable="false"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/patient_care_history"
        android:textColor="@color/background_color"
        android:textColorHighlight="@color/background_color"
        android:textColorLink="@color/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/dm_sans_medium"
        android:outlineAmbientShadowColor="@color/black"
        android:text="@string/welcome"
        android:textColor="@color/denim"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/companyLogo" />

    <ImageView
        android:id="@+id/companyLogo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_v3" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_marginTop="548dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/denim"
        android:clickable="false"
        android:contextClickable="false"
        android:fontFamily="@font/dm_sans_medium"

        android:text="@string/logout"
        android:textColor="@color/background_color"
        android:textColorHighlight="@color/background_color"
        android:textColorLink="@color/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/docActivityButton"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/coral"
        android:text="Doctor Activity"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>