<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/doctorView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".DoctorView">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Welcome, Dr. Allister!"
        android:textAlignment="center"
        android:textColor="#aec5eb"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/text_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toEndOf="@+id/homeBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_marginStart="24dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/home_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/text_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <Spinner
        android:id="@+id/patientSpinner"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_width="243dp"
        android:layout_height="37dp"
        android:layout_marginEnd="19dp"
        android:background="@color/text_color"
        android:dropDownSelector="@color/black"
        android:entries="@array/patientName_array"
        android:spinnerMode="dropdown"
        android:tooltipText="Select Patient Name"
        app:layout_constraintEnd_toStartOf="@+id/enterBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="171dp" />

    <SearchView
        android:id="@+id/patientSearch"
        android:layout_width="357dp"
        android:layout_height="37dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="18dp"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/patientSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gallery"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="94dip"
        android:layout_height="40dip"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientSearch"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@tools:sample/avatars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientSpinner"
        app:layout_constraintVertical_bias="0.529"
        tools:srcCompat="@drawable/timeline" />

</androidx.constraintlayout.widget.ConstraintLayout>